--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-particles": "^2.12.2",
-    "react-typist": "^2.0.5"
+    "react-typist": "^2.0.5",
+    "sass": "^1.79.3"
   },
   "devDependencies": {
     "eslint": "^8",
