--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tsparticles/engine": "^3.5.0",
+    "@tsparticles/preset-fire": "^3.1.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.5.0",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
     "react-particles": "^2.12.2",
-    "react-typist": "^2.0.5",
-    "sass": "^1.79.3"
+    "react-typist-component": "^1.1.1",
+    "sass": "^1.79.3",
+    "tsparticles": "^3.5.0"
   },
   "devDependencies": {
     "eslint": "^8",
