--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tsparticles/slim": "^3.5.0",
     "next": "14.2.13",
     "react": "^18",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
     "react-particles": "^2.12.2",
     "react-typist-component": "^1.1.1",
