--- a/cv-jesse/package.json
+++ b/cv-jesse/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tsparticles/preset-fire": "^3.1.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.5.0",
+    "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
     "next": "14.2.13",
     "next-themes": "^0.3.0",
