--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@tsparticles/slim": "^3.5.0",
     "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.446.0",
     "next": "14.2.13",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
+    "react-typist-component": "^1.1.1",
     "tailwind-merge": "^2.5.2",
     "ts-node": "^10.9.2"
   },
@@ -33,6 +35,7 @@
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-3d": "^1.0.7",
     "typescript": "^5"
   }
 }
