--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.2.13",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
     "react-typist-component": "^1.1.1",
