--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
     "lucide-react": "^0.446.0",
-    "next": "14.2.13",
+    "next": "^15.0.0",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-circular-progressbar": "^2.1.0",
@@ -26,11 +26,11 @@
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.13",
+    "eslint": "^9",
+    "eslint-config-next": "15.0.0",
     "eslint-config-prettier": "^9.1.0",
     "postcss": "^8",
     "prettier": "^3.3.3",
