--- a/package.json
+++ b/package.json
@@ -13,30 +13,29 @@
     "@tsparticles/preset-fire": "^3.1.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
-    "autoprefixer": "^10.4.20",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.454.0",
+    "lucide-react": "^0.483",
     "next": "^15.0.0",
-    "next-themes": "^0.3.0",
-    "react": "^18",
+    "next-themes": "^0.4",
+    "react": "^19",
     "react-circular-progressbar": "^2.1.0",
-    "react-dom": "^18",
-    "react-markdown": "^9.0.1",
-    "react-typist-component": "^1.1.1",
-    "ts-node": "^10.9.2"
+    "react-dom": "^19",
+    "react-markdown": "^10",
+    "react-typist-component": "^1.1.1"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.0",
     "@types/node": "^22",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "clsx": "^2.1.1",
     "eslint": "^9",
-    "eslint-config-next": "15.0.2",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-next": "15.2",
+    "eslint-config-prettier": "^10",
     "postcss": "^8",
     "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.8",
-    "tailwindcss": "^3.4.1",
-    "tailwindcss-3d": "^1.0.7",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^4.0.0",
+    "tailwind-merge": "^3.0.2",
     "typescript": "^5"
   }
 }
